--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festa Junina do CECM</title>
-    <style>
+    <style> <p style="background-image: url('fundo de imagem festa junina A4.jpng');">
         body {
             font-family: Arial, sans-serif;
             background-color: #3c99b1;
@@ -55,11 +55,7 @@
             <li>21h - Sorteio de brindes</li>
         </ul>
     </section>
-
-    <section>
-        <h2>Local</h2>
-        <ol><li> O evento acontecerá na quadra da escola CECM 11 de outubro!.</li></ol>
-    </section>
+    <selection><h2>Local</h2><ul><li>O evento acontecerá na quadra da escola CECM 11 de outubro!</li></ul></selection>
 
     <footer>
         <p>&copy; 2025 CECM - Todos os direitos reservados</p>
