--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <selection><h2>Local</h2><ul><li>O evento acontecerá na quadra da escola CECM 11 de outubro!</li></ul></selection>
 
     <footer>
-        <p>&copy; 2025 CECM - Todos os direitos reservados</p>
+        <p><p>&copy; 2025 CECM - Todos os direitos reservados</p></p>
     </footer>
 
 </body>
