--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festa Junina do CECM</title>
-    <style> <p style="background-image: url('fundo de imagem festa junina A4.jpng');">
+    <style> <p style="background-image: url('fundo de imagem festa junina A4.jpng');"></p>
         body {
             font-family: Arial, sans-serif;
             background-color: #3c99b1;
@@ -58,7 +58,7 @@
     <selection><h2>Local</h2><ul><li>O evento acontecerá na quadra da escola CECM 11 de outubro!</li></ul></selection>
 
     <footer>
-        <p><p>&copy; 2025 CECM - Todos os direitos reservados</p></p>
+        <p>&copy; 2025 CECM - Todos os direitos reservados</p>
     </footer>
 
 </body>
