--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Festa Junina do CECM</title>
-    <style> <p style="background-image: url('fundo de imagem festa junina A4.jpng');"></p>
+    <style> 
         body {
             font-family: Arial, sans-serif;
             background-color: #3c99b1;
